syntax = "proto3";
package protos;

message CommonRequest {
//    todo: change to RequestId
    string RequestId = 1;
}

message CommonResponse {
    string StatusCode = 1;
    CommonErrorResponse Error = 2;
}

message CommonErrorResponse {
    string ErrorCode = 1;
    string ErrorMessage = 2;
}